--- a/hito1.ipynb
+++ b/hito1.ipynb
@@ -15,7 +15,9 @@
    "metadata": {},
    "source": [
     "### Introducción\n",
-    " - preguntas\n",
+    "En el ambito de la astronomía, el estudio de la evolución cósmica requiere que identifiquemos cuáles objetos en el cielo estan más cerca, las estrellas y galaxias, o galaxias con un alto redshif y agujeros negros supermasivos (los denominados QSOs).\n",
+    "\n",
+    "Por un lado, la espectroscopía puede ser usada para medir redshifts de los diferentes objetos cósmicos, y poder diferenciar entre los diferentes tipos de fuentes\n",
     " - motivación"
    ]
   },
