--- a/hito1.ipynb
+++ b/hito1.ipynb
@@ -15,10 +15,11 @@
    "metadata": {},
    "source": [
     "### Introducción\n",
-    "En el ambito de la astronomía, el estudio de la evolución cósmica requiere que identifiquemos cuáles objetos en el cielo estan más cerca, las estrellas y galaxias, o galaxias con un alto redshif y agujeros negros supermasivos (los denominados QSOs).\n",
+    "En el ámbito de la astronomía, el estudio de la evolución cósmica requiere que identifiquemos cuáles objetos en el cielo están más cerca, las estrellas y galaxias, o galaxias con un alto redshift y agujeros negros supermasivos (los denominados QSOs).\n",
     "\n",
-    "Por un lado, la espectroscopía puede ser usada para medir redshifts de los diferentes objetos cósmicos, y poder diferenciar entre los diferentes tipos de fuentes\n",
-    " - motivación"
+    "Por un lado, la espectroscopía puede ser usada para medir redshifts de los diferentes objetos cósmicos, y poder diferenciar entre los diferentes tipos de fuentes, sin embargo la mayoría surveys deben caracterizar los objetos solamente basandose en la medición de imágenes.\n",
+    "\n",
+    "Nuestra pregunta de investigación es ¿Podemos classificar y predecir el redshift de objetos usando fotometría?"
    ]
   },
   {
@@ -27,7 +28,10 @@
    "metadata": {},
    "source": [
     "### Exploración de datos\n",
-    "- estadísticas\n",
+    "\n",
+    "Los datos usados para este proyecto es el SDSS DR 10 (link?), el cual posee más de 3 millones de espectros públicos con información relevante. \n",
+    "\n",
+    "- estadisticas\n",
     "- patrones iniciales"
    ]
   },
@@ -60,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "id": "6bdc224c",
    "metadata": {},
    "outputs": [
@@ -69,7 +73,7 @@
      "output_type": "stream",
      "text": [
       "Cantidad de datos originalmente (3602210, 17)\n",
-      "Cantidad de datos sin nan (163820, 17)\n"
+      "Cantidad de datos sin nan (3602210, 17)\n"
      ]
     }
    ],
@@ -85,13 +89,82 @@
     "columnas = [\"objID\", \"RAdeg\", \"Dedeg\", \n",
     "            \"umag\", \"gmag\", \"rmag\", \"imag\", \"zmag\", \n",
     "            \"u'mag\", \"g'mag\", \"r'mag\", \"i'mag\", \"z'mag\",\n",
-    "            \"specID\", \"sublass\", \"z\", \"Qf\"]\n",
+    "            \"specID\", \"subclass\", \"z\", \"Qf\"]\n",
     "\n",
     "with gzip.open(\"dame_qso.dat.gz\", \"rt\") as f:\n",
     "    df = pd.read_csv(f, delim_whitespace=True, names=columnas, comment='#')\n",
     "print(f\"Cantidad de datos originalmente {df.shape}\")\n",
-    "df.dropna(inplace=True)\n",
+    "#df.dropna(inplace=True)\n",
     "print(f\"Cantidad de datos sin nan {df.shape}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "2596f0b1",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(3602210, 17)"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3d567eee",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Nos aseguramos que es una subclase válida\n",
+    "subclases = [\"BROADLINE\",\"STARBURST\" ,\"STARBURST_BROADLINE\" , \"STARFORMING\", \"STARFORMING_BROADLINE\", \"AGN\", \"AGN_BROADLINE\"]\n",
+    "df = df[df[\"subclass\"].isin(subclases)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "3298ce62",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(163820, 17)"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "ac26051d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.neural_network import MLPClassifier\n",
+    "clf = MLPClassifier(hidden_layer_sizes=(128,64),\n",
+    "                    solver='lbfgs',   # L-BFGS ≈ Quasi-Newton\n",
+    "                    alpha=1e-5,\n",
+    "                    max_iter=1000,\n",
+    "                    random_state=42)"
    ]
   }
  ],
