--- a/hito1.ipynb
+++ b/hito1.ipynb
@@ -17,9 +17,11 @@
     "### Introducción\n",
     "En el ámbito de la astronomía, el estudio de la evolución cósmica requiere que identifiquemos cuáles objetos en el cielo están más cerca, las estrellas y galaxias, o galaxias con un alto redshift y agujeros negros supermasivos (los denominados QSOs).\n",
     "\n",
-    "Por un lado, la espectroscopía puede ser usada para medir redshifts de los diferentes objetos cósmicos, y poder diferenciar entre los diferentes tipos de fuentes, sin embargo la mayoría surveys deben caracterizar los objetos solamente basandose en la medición de imágenes.\n",
+    "Por un lado, la espectroscopía puede ser usada para medir redshifts de los diferentes objetos cósmicos, y poder diferenciar entre los diferentes tipos de fuentes, sin embargo la mayoría surveys deben caracterizar los objetos solamente basandose en la medición de imágenes. \n",
     "\n",
-    "Nuestra pregunta de investigación es ¿Podemos classificar y predecir el redshift de objetos usando fotometría?"
+    "Entonces es importante saber que la fotometría ha sido y será nuestra principal fuente de información para la inmensidad del universo extragaláctico, y es aquí donde surge nuestra pregunta de investigación ¿Podemos classificar y predecir el redshift de objetos usando fotometría?\n",
+    "\n",
+    "Este proyecto se basará en el trabajo hecho en el paper de investigación Brescia et. al 2015, con una diferencia en la parte experimental, pues buscaremos optimizar/mejorar la eficiencia (en cualquier ambito y/o sentido) de lo ya realizado. Como grupo consideramos que los procesos y análisis realizados en el paper son suficientes para que durante este proyecto logremos desarollar un amplio conocimiento en lo que es la minería de datos."
    ]
   },
   {
@@ -29,7 +31,7 @@
    "source": [
     "### Exploración de datos\n",
     "\n",
-    "Los datos usados para este proyecto es el SDSS DR 10 (link?), el cual posee más de 3 millones de espectros públicos con información relevante. \n",
+    "Los datos usados para este proyecto es el SDSS DR 10 (link?), el cual posee más de 3 millones de espectros públicos con información relevante. Sin embargo, esta es una cantidad exagerada de datos, por lo que nos combiene\n",
     "\n",
     "- estadisticas\n",
     "- patrones iniciales"
